--- a/css/daryl.css
+++ b/css/daryl.css
@@ -7,3 +7,19 @@
   padding-left: 1rem;
   padding-right: 1rem;
 }
+
+.panel-title > a:before {
+    float: right !important;
+    font-family: FontAwesome;
+    content:"\f068";
+    padding-right: 5px;
+}
+.panel-title > a.collapsed:before {
+    float: right !important;
+    content:"\f067";
+}
+.panel-title > a:hover,
+.panel-title > a:active,
+.panel-title > a:focus  {
+    text-decoration:none;
+}
