--- a/css/daryl.css
+++ b/css/daryl.css
@@ -1,11 +1,10 @@
 .read-more-button {
-  border: 2px solid #0A2B4E;
+  border: 2px solid;
   padding: 10px;
-  border-radius: 25px;
-  color: #0A2B4E;
   display: inline-block;
   padding-left: 1rem;
   padding-right: 1rem;
+  float:right;
 }
 
 .panel-title > a:before {
