--- a/css/daryl.css
+++ b/css/daryl.css
@@ -1,9 +1,9 @@
 .read-more-button {
   border: 2px solid;
-  padding: 10px;
+  padding: .5rem;
   display: inline-block;
-  padding-left: 1rem;
-  padding-right: 1rem;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
   float:right;
 }
 
