added categoy accordion

--- a/css/daryl.css
+++ b/css/daryl.css
@@ -10,12 +10,12 @@
 .panel-title > a:before {
     float: right !important;
     font-family: FontAwesome;
-    content:"\f068";
+    content:"-";
     padding-right: 5px;
 }
 .panel-title > a.collapsed:before {
     float: right !important;
-    content:"\f067";
+    content:"+";
 }
 .panel-title > a:hover,
 .panel-title > a:active,
