--- a/css/bryan.css
+++ b/css/bryan.css
@@ -1,3 +1,207 @@
+h1, h2, h3, h4, h5 {
+  text-transform: uppercase;
+  font-weight: bold; }
 
+h2 {
+  font-size: 1.25rem; }
+
+h3 {
+  font-size: 1rem; }
+
+h4 {
+  font-size: 1rem; }
+
+section {
+  padding-top: 2rem;
+  padding-bottom: 2rem; }
+  @media screen and (min-width: 768px) {
+    section {
+      padding-top: 4rem;
+      padding-bottom: 4rem; } }
+
+#pageHead {
+  margin-top: 95px;
+  background: #444;
+  background-position: center;
+  background-size: cover; }
+  #pageHead h1 {
+    color: #fff;
+    text-shadow: 0 0 45px #000; }
+
+.readMore {
+  display: inline-block;
+  text-transform: uppercase;
+  color: #fff;
+  letter-spacing: 0.1rem;
+  font-size: 0.75rem;
+  padding: 0.8rem 1.75rem;
+  border: 1px solid #fff;
+  font-weight: bold;
+  transition: all .2s ease-in-out;
+  -webkit-transition: all .2s ease-in-out;
+  -moz-transition: all .2s ease-in-out;
+  -o-transition: all .2s ease-in-out; }
+  .readMore:visited, .readMore:focus {
+    outline: 0;
+    color: #fff; }
+  .readMore:hover {
+    text-decoration: none;
+    background: #fff;
+    color: #333; }
+
+.spacer {
+  width: 4rem;
+  background-color: #212032;
+  height: 1px;
+  margin: 1.5rem auto; }
+  .spacer.spacerWht {
+    background-color: #fff; }
+
+.slick-dots {
+  margin-left: 0;
+  padding-left: 0;
+  text-align: center;
+  width: 100%; }
+  .slick-dots li {
+    display: inline-block;
+    list-style: none;
+    margin: 3px; }
+    .slick-dots li button {
+      width: 10px;
+      height: 10px;
+      color: transparent;
+      border-radius: 50%;
+      padding: 0; }
+      .slick-dots li button:hover {
+        cursor: pointer; }
+    .slick-dots li.slick-active button {
+      background-color: #666; }
+
+#coNums .coNumsNum {
+  font-size: 2rem;
+  font-weight: bold;
+  letter-spacing: 0.4rem; }
+#coNums .coNumsSub {
+  text-transform: uppercase;
+  font-size: 0.75rem;
+  letter-spacing: 0.2rem; }
+
+#blogFeedHoriz {
+  padding-top: 0;
+  padding-bottom: 0; }
+
+#ctaBanner {
+  background: #444;
+  color: #fff; }
+
+#officeMap {
+  padding-top: 0;
+  padding-bottom: 0; }
+
+@media screen and (min-width: 768px) {
+  .navbar .nav-item .nav-link {
+    padding: 2rem 1.5rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    color: #333; } }
+
+#colophon {
+  background-color: #212032;
+  color: #fff;
+  padding-top: 2rem; }
+  #colophon #footDisc {
+    margin-top: 2rem;
+    background: #000;
+    color: #fff;
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem; }
+    #colophon #footDisc p {
+      margin: 0; }
+    #colophon #footDisc .bTT a {
+      text-transform: uppercase;
+      color: #fff; }
+      #colophon #footDisc .bTT a:hover {
+        text-decoration: none; }
+
+.home #introSlider {
+  padding-top: 0;
+  padding-bottom: 0; }
+  .home #introSlider .slick-arrow {
+    position: absolute;
+    top: 50%;
+    background: rgba(0, 0, 0, 0.6);
+    color: #fff;
+    z-index: 1; }
+    .home #introSlider .slick-arrow:hover {
+      background: #000;
+      cursor: pointer; }
+    .home #introSlider .slick-arrow.slick-prev {
+      left: 0; }
+    .home #introSlider .slick-arrow.slick-next {
+      right: 0; }
+  .home #introSlider .slick-dots {
+    position: absolute;
+    bottom: 40px;
+    z-index: 1; }
+.home #threeFeature {
+  background-color: #212032;
+  color: #fff; }
+  .home #threeFeature h2 {
+    font-weight: normal;
+    font-size: 1rem; }
+.home #recentDeals {
+  padding-top: 0;
+  padding-bottom: 0; }
+
+.page-template-page-about .imgOffsetContainer {
+  background: #f2f2f2;
+  margin-right: 1rem; }
+  .page-template-page-about .imgOffsetContainer img {
+    position: relative;
+    top: 1rem;
+    left: 1rem; }
+  .page-template-page-about .imgOffsetContainer.imgOffsetRight {
+    margin-right: 0;
+    margin-left: 1rem; }
+    .page-template-page-about .imgOffsetContainer.imgOffsetRight img {
+      left: initial;
+      right: 1rem; }
+.page-template-page-about #coNums {
+  background-color: #212032;
+  color: #fff; }
+.page-template-page-about #aboutProcess {
+  background-color: #212032;
+  color: #fff; }
+.page-template-page-about .memSlider .slick-arrow {
+  position: absolute;
+  top: 50%;
+  background: #f2f2f2;
+  color: #333;
+  z-index: 1;
+  border: 0;
+  border-radius: 50%; }
+  .page-template-page-about .memSlider .slick-arrow:hover {
+    cursor: pointer; }
+  .page-template-page-about .memSlider .slick-arrow.slick-prev {
+    left: -3rem; }
+  .page-template-page-about .memSlider .slick-arrow.slick-next {
+    right: -3rem; }
+.page-template-page-about .memSlider .memContainer {
+  background-color: #212032;
+  margin-left: 15px;
+  margin-right: 15px; }
+  .page-template-page-about .memSlider .memContainer .memImgContainer {
+    height: 220px;
+    width: 100%;
+    background-size: cover;
+    background-position: center; }
+  .page-template-page-about .memSlider .memContainer .memTxtContainer {
+    padding: 1rem;
+    color: #fff; }
+    .page-template-page-about .memSlider .memContainer .memTxtContainer h4 {
+      font-weight: normal;
+      font-size: 0.75rem;
+      text-transform: none;
+      margin-bottom: 1rem; }
 
 /*# sourceMappingURL=bryan.css.map */
