--- a/css/daryl.css
+++ b/css/daryl.css
@@ -9,26 +9,44 @@
   float:right;
 }
 
-.panel-title > a:before {
-    float: right !important;
-    font-family: FontAwesome;
-    content:"\f068";
-    padding-right: 5px;
-}
-.panel-title > a.collapsed:before {
-    float: right !important;
-    content:"\f067";
-}
-.panel-title > a:hover,
-.panel-title > a:active,
-.panel-title > a:focus  {
-    text-decoration:none;
-}
-
 .news-space {
   margin: 4%;
 }
 
 .row.news-category-column {
   marign-left:15%;
+}
+
+/* Accordion*/
+.panel-group .panel {
+    border-radius: 0;
+    box-shadow: none;
+    border-color: #EEEEEE;
+}
+
+.panel-default > .panel-heading {
+    padding: 0;
+    border-radius: 0;
+    color: #212121;
+    background-color: #FAFAFA;
+    border-color: #EEEEEE;
+}
+
+.panel-title {
+    font-size: 14px;
+}
+
+.panel-title > a {
+    display: block;
+    padding: 15px;
+    text-decoration: none;
+}
+
+.more-less {
+    float: right;
+    color: #212121;
+}
+
+.panel-default > .panel-heading + .panel-collapse > .panel-body {
+    border-top-color: #EEEEEE;
 }
